docs: update README and introduction files

--- a/packages/document/docs/en/api/config/config-frontmatter.mdx
+++ b/packages/document/docs/en/api/config/config-frontmatter.mdx
@@ -51,7 +51,7 @@ Set the suffix of the page title. When `titleSuffix` is not set, the site's [tit
 
 ```yaml
 ---
-titleSuffix: 'Rspack-based Static Site Generator'
+titleSuffix: 'Rsbuild-based Static Site Generator'
 ---
 ```
 
@@ -59,7 +59,7 @@ The default separator between the title and the suffix is `-`, you can also use 
 
 ```yaml
 ---
-titleSuffix: '| Rspack-based Static Site Generator'
+titleSuffix: '| Rsbuild-based Static Site Generator'
 ---
 ```
 
