--- a/packages/document/docs/en/guide/start/introduction.mdx
+++ b/packages/document/docs/en/guide/start/introduction.mdx
@@ -2,16 +2,16 @@
 
 Rspress is a static site generator based on [Rsbuild](https://rsbuild.dev/), rendered with the React framework. It comes with a default documentation theme, and you can quickly build a documentation site with Rspress. You can also customize the theme to meet your personalized static site needs, such as blog sites, product homepages, etc. Of course, you can also integrate the corresponding plugins provided by the official to easily build component library documentation.
 
-## Project background
+## Why Rspress
 
-Rspress is mainly built in the following directions:
+Rspress is designed around the following core features:
 
 - **Build Performance**. Ensuring a fast enough startup speed brings a good development experience.
 - **MDX Support**. Through MDX, we can conveniently reuse document fragments and render custom React components in documents.
 - **Basic Capabilities of Documentation Site**. Including internationalization, multi-version support, full-text search, component library documentation, etc.
 - **Extensibility**. Such as Built-in plugin system, supports extending framework functions through plugin API.
 
-These also represent some core requirements for SSG site development. The following will introduce these aspects separately.
+These also represent some core requirements for static site development. The following will introduce these aspects separately.
 
 ### Build performance
 
@@ -295,4 +295,4 @@ export default defineConfig({
 
 ## Try Rspress
 
-Go to [Quick Start](/guide/start/getting-started) to learn how to use Rspress to quickly build a documentation site.
+Go to [Quick start](/guide/start/getting-started) to learn how to use Rspress to quickly build a documentation site.
