--- a/packages/document/docs/zh/api/config/config-frontmatter.mdx
+++ b/packages/document/docs/zh/api/config/config-frontmatter.mdx
@@ -51,7 +51,7 @@ import PageType from '@zh/fragments/page-type';
 
 ```yaml
 ---
-titleSuffix: '基于 Rspack 的静态站点生成器'
+titleSuffix: '基于 Rsbuild 的静态站点生成器'
 ---
 ```
 
@@ -59,7 +59,7 @@ titleSuffix: '基于 Rspack 的静态站点生成器'
 
 ```yaml
 ---
-titleSuffix: '| 基于 Rspack 的静态站点生成器'
+titleSuffix: '| 基于 Rsbuild 的静态站点生成器'
 ---
 ```
 
