--- a/packages/document/docs/zh/guide/start/introduction.mdx
+++ b/packages/document/docs/zh/guide/start/introduction.mdx
@@ -2,16 +2,16 @@
 
 Rspress 是一个基于 [Rsbuild](https://rsbuild.dev/) 的静态站点生成器，基于 React 框架进行渲染，内置了一套默认的文档主题，你可以通过 Rspress 来快速搭建一个文档站点，同时也可以自定义主题，来满足你的个性化静态站需求，比如博客站、产品主页等。当然，你也可以接入官方提供的相应插件来方便地搭建组件库文档。
 
-## 项目背景
+## 为什么选择 Rspress
 
-Rspress 主要以如下的几个方向来进行建设：
+Rspress 主要围绕以下几个核心特性进行设计：
 
 - **构建性能**。保证足够快的启动速度，带来良好的开发体验。
 - **MDX 支持**。通过 MDX，我们可以方便地复用文档片段，以及在文档中渲染自定义的 React 组件。
 - **文档站基础能力**。包括国际化、多版本支持、全文搜索、组件库文档等。
 - **可扩展性**。内置插件系统，支持通过插件 API 来扩展框架功能。
 
-这些也代表了 SSG 站点开发的一些核心需求。接下来将会根据这几个方面分别进行介绍。
+这些也代表了静态站点开发的一些核心需求。接下来将会根据这几个方面分别进行介绍。
 
 ### 构建性能
 
