--- a/e2e/fixtures/github-alert-mdxrs/doc/index.mdx
+++ b/e2e/fixtures/github-alert-mdxrs/doc/index.mdx
@@ -43,7 +43,7 @@ import { Steps } from '@theme';
 
 > > Nested blockquote
 
-> ![Image Alt Text](https://github.com/web-infra-dev/rspress/assets/39261479/999e7946-45ff-45d5-b9cd-594e634e0e5a)
+> ![Image Alt Text](https://assets.rspack.dev/rspress/rspress-banner.png)
 
 1. Title
 
