docs: fix error of using custom search component

--- a/packages/document/docs/en/guide/advanced/custom-theme.mdx
+++ b/packages/document/docs/en/guide/advanced/custom-theme.mdx
@@ -124,7 +124,11 @@ export default {
 };
 
 // Custom Search Component
-const MySearch = () => <div className="my-search">{Search}</div>;
+const MySearch = () => (
+  <div className="my-search">
+    <Search />
+  </div>
+);
 export { MySearch as Search };
 // re-export
 export * from 'rspress/theme';
