--- a/packages/document/docs/zh/guide/advanced/custom-theme.mdx
+++ b/packages/document/docs/zh/guide/advanced/custom-theme.mdx
@@ -124,7 +124,11 @@ export default {
 };
 
 // 定制 Search 组件
-const MySearch = () => <div className="my-search">{Search}</div>;
+const MySearch = () => (
+  <div className="my-search">
+    <Search />
+  </div>
+);
 export { MySearch as Search };
 // 重导出其他部分
 export * from 'rspress/theme';
