docs: update lastUpdated opt need git

--- a/packages/document/docs/en/plugin/official-plugins/last-updated.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/last-updated.mdx
@@ -6,7 +6,7 @@ import { SourceCode, PackageManagerTabs } from 'rspress/theme';
 
 ## Introduction
 
-`@rspress/plugin-last-updated` is a plugin for displaying the last updated time in articles.
+`@rspress/plugin-last-updated` is a plugin for displaying the git last updated time in articles.
 
 :::tip Tip
 
