--- a/packages/document/docs/zh/plugin/official-plugins/last-updated.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/last-updated.mdx
@@ -6,7 +6,7 @@ import { SourceCode, PackageManagerTabs } from 'rspress/theme';
 
 ## 介绍
 
-`@rspress/plugin-last-updated` 是一个用于在文章中显示最后更新时间的插件。
+`@rspress/plugin-last-updated` 是一个用于在文章中显示 git 最后更新时间的插件。
 
 :::tip 提示
 
