--- a/packages/document/docs/en/api/config/config-theme.mdx
+++ b/packages/document/docs/en/api/config/config-theme.mdx
@@ -242,7 +242,7 @@ export default defineConfig({
 - Type: `boolean`
 - Default: `false`
 
-Whether to display the last update time, it is not displayed by default.
+Whether to display the git last update time, it is not displayed by default.
 
 For example:
 
@@ -507,7 +507,7 @@ export interface LocaleConfig {
   outlineTitle?: string;
   // Whether to display the outline title
   outline?: boolean;
-  // Whether to display the last update time
+  // Whether to display the git last update time
   lastUpdated?: boolean;
   // Last update time text
   lastUpdatedText?: string;
