--- a/packages/document/docs/en/plugin/official-plugins/last-updated.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/last-updated.mdx
@@ -6,11 +6,12 @@ import { SourceCode, PackageManagerTabs } from 'rspress/theme';
 
 ## Introduction
 
-`@rspress/plugin-last-updated` is a plugin for displaying the git last updated time in articles.
+`@rspress/plugin-last-updated` is a plugin for displaying the last updated time in articles.
 
 :::tip Tip
 
-When you have configured `lastUpdated: true` in the default theme, this plugin will be automatically activated. You don't need to install and register it manually.
+- When you have configured `lastUpdated: true` in the default theme, this plugin will be automatically activated. You don't need to install and register it manually.
+- You need to commit the markdown file to see the updated time.
 
 :::
 
