--- a/packages/document/docs/en/plugin/official-plugins/last-updated.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/last-updated.mdx
@@ -8,7 +8,7 @@ import { SourceCode, PackageManagerTabs } from 'rspress/theme';
 
 `@rspress/plugin-last-updated` is a plugin for displaying the last updated time in articles.
 
-:::tip Tip
+:::tip
 
 - When you have configured `lastUpdated: true` in the default theme, this plugin will be automatically activated. You don't need to install and register it manually.
 - You need to commit the markdown file to see the updated time.
