docs: update lastUpdated need commit (#1845)
Co-authored-by: Timeless0911 <1604889533@qq.com>

--- a/packages/document/docs/en/api/config/config-theme.mdx
+++ b/packages/document/docs/en/api/config/config-theme.mdx
@@ -244,6 +244,10 @@ export default defineConfig({
 
 Whether to display the last update time, it is not displayed by default.
 
+:::info
+You need to commit the markdown file to see the updated time.
+:::
+
 For example:
 
 ```ts title="rspress.config.ts"
