--- a/packages/document/docs/zh/api/config/config-theme.mdx
+++ b/packages/document/docs/zh/api/config/config-theme.mdx
@@ -230,6 +230,10 @@ export default defineConfig({
 
 是否显示最后更新时间，默认情况下不显示。
 
+:::info
+你必须提交 markdown 文件才能看到最后更新时间。
+:::
+
 比如:
 
 ```ts title="rspress.config.ts"
