--- a/packages/document/docs/zh/plugin/official-plugins/last-updated.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/last-updated.mdx
@@ -8,9 +8,10 @@ import { SourceCode, PackageManagerTabs } from 'rspress/theme';
 
 `@rspress/plugin-last-updated` 是一个用于在文章中显示最后更新时间的插件。
 
-:::tip 提示
+:::tip
 
-当你在默认主题中配置了 `lastUpdated: true` 时，该插件会自动生效，不需要你去安装和注册插件。
+- 当你在默认主题中配置了 `lastUpdated: true` 时，该插件会自动生效，不需要你去安装和注册插件。
+- 你必须提交 markdown 文件才能看到最后更新时间。
 
 :::
 
