fix: search code block

--- a/e2e/fixtures/search-code-blocks/doc/index.mdx
+++ b/e2e/fixtures/search-code-blocks/doc/index.mdx
@@ -16,6 +16,6 @@ console.log('hello from js code block');
 
 ```jsx
 <React.Suspense>
-  <Logo />
+  <HelloFromJsxCodeBlock />
 </React.Suspense>
 ```
