fix(search): should search JSX element code block (#1867)
Co-authored-by: Timeless0911 <50201324+Timeless0911@users.noreply.github.com>
Co-authored-by: neverland <chenjiahan.jait@bytedance.com>

--- a/e2e/fixtures/search-code-blocks/doc/index.mdx
+++ b/e2e/fixtures/search-code-blocks/doc/index.mdx
@@ -1,5 +1,21 @@
 # Hello world
 
+## Inline code block
+
+`hello from inline code block`
+
+`hello from <React.inline />`
+
+## Js code block
+
 ```js
-console.log('hello from code block');
+console.log('hello from js code block');
+```
+
+## Jsx code block
+
+```jsx
+<React.Suspense>
+  <HelloFromJsxCodeBlock />
+</React.Suspense>
 ```
