--- a/packages/document/docs/zh/api/config/config-build.mdx
+++ b/packages/document/docs/zh/api/config/config-build.mdx
@@ -48,9 +48,9 @@ export default defineConfig({
 
 用于注册 [Rsbuild 插件](https://rsbuild.dev/zh/plugins/list/)。
 
-你可以在 Rspress 项目中使用 Rsbuild 丰富的插件，来快速扩展构建能力。
+你可以利用 Rsbuild 丰富的插件生态来增强和扩展构建能力。
 
-- 示例：通过 [@rsbuild/plugin-vue](https://rsbuild.dev/plugins/list/plugin-vue) 支持 Vue SFC
+- 示例：通过 [@rsbuild/plugin-vue](https://rsbuild.dev/plugins/list/plugin-vue) 支持 Vue SFC。
 
 ```ts title="rspress.config.ts"
 import { defineConfig } from 'rspress/config';
@@ -61,7 +61,7 @@ export default defineConfig({
 });
 ```
 
-- 示例：通过 [rsbuild-plugin-google-analytics](https://github.com/rspack-contrib/rsbuild-plugin-google-analytics) 添加 Google analytics
+- 示例：通过 [rsbuild-plugin-google-analytics](https://github.com/rspack-contrib/rsbuild-plugin-google-analytics) 添加 Google analytics。
 
 ```ts title="rspress.config.ts"
 import { defineConfig } from 'rspress/config';
@@ -77,7 +77,7 @@ export default defineConfig({
 });
 ```
 
-- 示例：通过 [rsbuild-plugin-open-graph](https://github.com/rspack-contrib/rsbuild-plugin-open-graph) 添加 Open Graph meta 标签
+- 示例：通过 [rsbuild-plugin-open-graph](https://github.com/rspack-contrib/rsbuild-plugin-open-graph) 添加 Open Graph meta 标签。
 
 ```ts title="rspress.config.ts"
 import { defineConfig } from 'rspress/config';
