--- a/packages/document/docs/en/api/client-api/api-runtime.mdx
+++ b/packages/document/docs/en/api/client-api/api-runtime.mdx
@@ -4,6 +4,8 @@ Rspress exposes some runtime APIs, which is convenient for you to do some custom
 
 ## usePageData
 
+- **Type:** `() => PageData`
+
 Get the data of the current page, and the return value is an object, which contains all the data of the current page.
 
 ```js
@@ -16,6 +18,8 @@ function MyComponent() {
 ```
 
 ## useLang
+
+- **Type:** `() => string`
 
 Get the current language, the return value is a string, which is the current language.
 
@@ -31,6 +35,8 @@ function MyComponent() {
 
 ## useVersion
 
+- **Type:** `() => string`
+
 Get the current version, the return value is a string, which is the current version.
 
 ```tsx
@@ -44,6 +50,8 @@ export default () => {
 
 ## useDark
 
+- **Type:** `() => boolean`
+
 Whether it is dark mode currently, the return value is a boolean value.
 
 ```js
@@ -52,6 +60,24 @@ import { useDark } from 'rspress/runtime';
 function MyComponent() {
   const dark = useDark();
   return <div>{dark}</div>;
+}
+```
+
+Note that in the SSG process, `useDark` cannot accurately reflect the theme setting of the user's browser, because SSG is executed during the build stage. Only after client hydration is complete, this hook will return the correct theme value.
+
+If you need to apply a dark theme style in the SSG stage, it is recommended to use the CSS selector `.dark` to set the style. Rspress will add the `dark` class name to the root element of the document, which will be effective in both SSG and client:
+
+```css
+/* Light mode style */
+.my-component {
+  color: black;
+  background-color: white;
+}
+
+/* Dark mode style */
+.dark .my-component {
+  color: white;
+  background-color: #1a1a1a;
 }
 ```
 
@@ -65,7 +91,7 @@ import UseI18n from '../../fragments/useI18n';
 
 ## Router hook
 
-The framework internally uses and re-exports all APIs of `react-router-dom`, you can use it like this:
+Rspress internally uses and re-exports all APIs of `react-router-dom`, you can use it like this:
 
 ```ts
 import { useLocation } from 'rspress/runtime';
