--- a/packages/document/docs/en/fragments/global-ui-components.mdx
+++ b/packages/document/docs/en/fragments/global-ui-components.mdx
@@ -1,4 +1,4 @@
-When you register global components, the framework will automatically render these React components in the theme without manually importing and using them.
+When you register global components, Rspress will automatically render these React components in the theme without manually importing and using them.
 
 Through global components, you can complete many custom functions, such as:
 
