--- a/packages/document/docs/en/fragments/useI18n.mdx
+++ b/packages/document/docs/en/fragments/useI18n.mdx
@@ -1,4 +1,4 @@
-The framework provides `useI18n` this hook to get the internationalized text, the usage is as follows:
+Rspress provides `useI18n` this hook to get the internationalized text, the usage is as follows:
 
 ```tsx
 import { useI18n } from 'rspress/runtime';
