--- a/packages/document/docs/en/guide/advanced/extend-build.mdx
+++ b/packages/document/docs/en/guide/advanced/extend-build.mdx
@@ -64,7 +64,7 @@ export default defineConfig({
 
 ## MDX compilation
 
-The compilation of MDX in the framework is based on [unified](https://github.com/unifiedjs/unified), and you can add related compilation plugins through `markdown` configuration. for example
+The compilation of MDX in Rspress is based on [unified](https://github.com/unifiedjs/unified), and you can add related compilation plugins through `markdown` configuration. for example
 :
 
 ```ts title="rspress.config.ts"
