--- a/packages/document/docs/en/guide/basic/custom-page.mdx
+++ b/packages/document/docs/en/guide/basic/custom-page.mdx
@@ -10,7 +10,7 @@ Rspress provides several ways for you to customize the content of your pages, in
 
 ## Custom global components
 
-In some scenarios, you may need to add some custom global components to the page. The framework provides a config item `globalUIComponents` to achieve this function.
+In some scenarios, you may need to add some custom global components to the page. Rspress provides a config item `globalUIComponents` to achieve this function.
 
 ### How to use
 
@@ -48,7 +48,7 @@ import GlobalUIComponents from '@en/fragments/global-ui-components';
 
 ## Custom styles
 
-In some scenarios, you may need to add some global styles on top of the theme UI. The framework provides a configuration item `globalStyles` to achieve this function.
+In some scenarios, you may need to add some global styles on top of the theme UI. Rspress provides a configuration item `globalStyles` to achieve this function.
 
 ### How to use
 
@@ -71,7 +71,7 @@ Then you can add the following code:
 }
 ```
 
-In this way, the framework will automatically collect all global styles and merge them into the final style file.
+In this way, Rspress will automatically collect all global styles and merge them into the final style file.
 
 Here are some commonly used global styles:
 
