--- a/packages/document/docs/en/guide/default-theme/i18n.mdx
+++ b/packages/document/docs/en/guide/default-theme/i18n.mdx
@@ -114,7 +114,7 @@ export default defineConfig({
 });
 ```
 
-This is important because **for routes in the default language, the framework will remove the language prefix**, such as `/en/guide/getting-started` will be converted to `/guide/getting-started`.
+This is important because **for routes in the default language, Rspress will remove the language prefix**, such as `/en/guide/getting-started` will be converted to `/guide/getting-started`.
 
 ## Create documents in different language
 
