--- a/packages/document/docs/zh/fragments/useI18n.mdx
+++ b/packages/document/docs/zh/fragments/useI18n.mdx
@@ -1,4 +1,4 @@
-框架提供了 `useI18n` 这个 hook 来获取国际化文本，使用方式如下：
+Rspress 提供了 `useI18n` 这个 hook 来获取国际化文本，使用方式如下：
 
 ```tsx
 import { useI18n } from 'rspress/runtime';
