--- a/packages/document/docs/zh/guide/advanced/extend-build.mdx
+++ b/packages/document/docs/zh/guide/advanced/extend-build.mdx
@@ -66,7 +66,7 @@ export default defineConfig({
 
 ## MDX 编译插件
 
-在框架中 MDX 的编译基于 [unified](https://github.com/unifiedjs/unified) 完成，你可以通过 `markdown` 配置来添加相关的编译插件。比如
+在 Rspress 中，MDX 的编译基于 [unified](https://github.com/unifiedjs/unified) 完成，你可以通过 `markdown` 配置来添加相关的编译插件。比如
 
 ```ts title="rspress.config.ts"
 import { defineConfig } from 'rspress/config';
