--- a/packages/document/docs/zh/guide/basic/custom-page.mdx
+++ b/packages/document/docs/zh/guide/basic/custom-page.mdx
@@ -10,7 +10,7 @@ Rspress 提供了多种方式能让你自定义页面的内容，包括：
 
 ## 自定义全局组件
 
-某些场景下，你可能需要在页面中添加一些自定义的全局组件，框架提供了一个配置项 `globalUIComponents` 来实现这个功能。
+某些场景下，你可能需要在页面中添加一些自定义的全局组件，Rspress 提供了一个配置项 `globalUIComponents` 来实现这个功能。
 
 ### 使用方法
 
@@ -48,7 +48,7 @@ import GlobalUIComponents from '@zh/fragments/global-ui-components';
 
 ## 自定义样式
 
-某些场景下，你可能需要在主题 UI 的基础上添加一些全局样式，框架提供了一个配置项 `globalStyles` 来实现这个功能。
+某些场景下，你可能需要在主题 UI 的基础上添加一些全局样式，Rspress 提供了一个配置项 `globalStyles` 来实现这个功能。
 
 ### 使用方法
 
@@ -72,7 +72,7 @@ export default defineConfig({
 }
 ```
 
-这样框架会自动搜集所有的全局样式并合并到最终的样式文件中。
+这样 Rspress 会自动搜集所有的全局样式并合并到最终的样式文件中。
 
 下面列举一些常用的全局样式：
 
