--- a/packages/document/docs/zh/guide/default-theme/i18n.mdx
+++ b/packages/document/docs/zh/guide/default-theme/i18n.mdx
@@ -115,7 +115,7 @@ export default defineConfig({
 });
 ```
 
-这很重要，因为**对于默认语言下的路由，框架会去掉语言前缀**，比如 `/en/guide/getting-started` 会被转换为 `/guide/getting-started`。
+这很重要，因为**对于默认语言下的路由，Rspress 会去掉语言前缀**，比如 `/en/guide/getting-started` 会被转换为 `/guide/getting-started`。
 
 ## 新建不同的语言版本的文档
 
