--- a/packages/document/docs/en/api/config/config-basic.mdx
+++ b/packages/document/docs/en/api/config/config-basic.mdx
@@ -84,7 +84,7 @@ export default defineConfig({
 });
 ```
 
-The framework will find your icon in the `public` directory, of course you can also set it to a CDN address.
+Rspress will find your icon in the `public` directory, of course you can also set it to a CDN address.
 
 ## lang
 
@@ -126,7 +126,7 @@ export default defineConfig({
 });
 ```
 
-The framework will find your icon in the `public` directory, you can also set it to a CDN address.
+Rspress will find your icon in the `public` directory, you can also set it to a CDN address.
 
 Of course you can set different logos for dark/light mode:
 
@@ -194,14 +194,14 @@ export default defineConfig({
     {
       lang: 'en-US',
       label: 'English',
-      title: 'Doc Tools',
-      description: 'Doc Tools',
+      title: 'My Site',
+      description: 'My site description',
     },
     {
       lang: 'zh-CN',
       label: '简体中文',
-      title: '文档框架',
-      description: '文档框架',
+      title: '站点标题',
+      description: '站点描述',
     },
   ],
 });
