--- a/packages/document/docs/zh/api/config/config-basic.mdx
+++ b/packages/document/docs/zh/api/config/config-basic.mdx
@@ -84,7 +84,7 @@ export default defineConfig({
 });
 ```
 
-框架会在 `public` 目录中找到你的图标，当然你也可以设置成一个 CDN 地址。
+Rspress 会在 `public` 目录中找到你的图标，当然你也可以设置成一个 CDN 地址。
 
 ## lang
 
@@ -126,7 +126,7 @@ export default defineConfig({
 });
 ```
 
-框架会在 `public` 目录中找到你的图标，当然你也可以设置成一个 CDN 地址。
+Rspress 会在 `public` 目录中找到你的图标，当然你也可以设置成一个 CDN 地址。
 
 当然你可以针对浅色/暗黑模式设置不同的 logo：
 
@@ -194,14 +194,14 @@ export default defineConfig({
     {
       lang: 'en-US',
       label: 'English',
-      title: 'Doc Tools',
-      description: 'Doc Tools',
+      title: 'My Site',
+      description: 'My site description',
     },
     {
       lang: 'zh-CN',
       label: '简体中文',
-      title: '文档框架',
-      description: '文档框架',
+      title: '站点标题',
+      description: '站点描述',
     },
   ],
 });
