--- a/packages/document/docs/zh/fragments/global-ui-components.mdx
+++ b/packages/document/docs/zh/fragments/global-ui-components.mdx
@@ -1,4 +1,4 @@
-当你注册了全局组件之后，框架会自动将这些 React 组件在主题中进行渲染，而不用你手动引入。
+当你注册了全局组件之后，Rspress 会自动将这些 React 组件在主题中进行渲染，而不用你手动引入。
 
 通过全局组件，你可以完成诸多自定义的功能，比如:
 
